# AOC2023

./: CMakeLists.txt  vcpkg.json
src/: CMakeLists.txt  day1.cpp  day2.cpp  day3.cpp
src/inputs/: day1res.txt
